--- a/index.html
+++ b/index.html
@@ -44,7 +44,115 @@
       <img src="img/painel2.jpg" alt="entrada do hotel" class="painel" />
     </header>
 
-    <main></main>
+    <main>
+      <div id="apresentacao">
+        <h2>Seja bem vindo</h2>
+        <p>
+          <span
+            >Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis
+            id ducimus iusto ipsa sit ea possimus labore quam cupiditate
+            exercitationem corrupti molestiae, saepe et facilis eos quisquam ex
+            cum repudiandae.</span
+          >
+          <span
+            >Veritatis reiciendis officiis porro atque fugiat quisquam earum
+            nisi delectus illo beatae commodi minima aspernatur magni error
+            aliquid a, aut quod vero officia, veniam facere incidunt distinctio
+            sunt ad? Adipisci?</span
+          >
+          <span
+            >Incidunt debitis impedit ipsam dolore. Amet voluptate reprehenderit
+            commodi! Cum minus necessitatibus id alias repellendus reiciendis
+            asperiores debitis! Debitis neque sunt itaque eveniet sequi minus
+            saepe ex distinctio recusandae illum.</span
+          >
+        </p>
+        <p>
+          <span
+            >Corporis cum vel veritatis, atque suscipit dolore. Voluptates
+            voluptas error optio quibusdam rerum quod dolorum! Assumenda
+            voluptatem iure esse ipsa. Facere laboriosam incidunt hic
+            perferendis debitis placeat aliquid odit voluptatum!</span
+          >
+          <span
+            >Earum, placeat assumenda! Dolores blanditiis suscipit ullam odit
+            rerum, dolorem aut quod possimus id modi labore at praesentium
+            officiis accusamus, vitae fugit sed. Soluta sequi natus impedit
+            dicta? Cupiditate, necessitatibus!</span
+          >
+          <span
+            >Sed, deleniti expedita. Ratione, ab laudantium assumenda iure
+            exercitationem nisi blanditiis asperiores voluptate consectetur,
+            corporis veritatis commodi repellat tempore cumque quasi sint odit!
+            Quas repudiandae ipsum rerum atque delectus aspernatur.</span
+          >
+        </p>
+      </div>
+
+      <div id="cardHome">
+        <!--Inicio da linha-->
+        <div class="row">
+          <div class="col s12 m6">
+            <div class="card">
+              <div class="card-image">
+                <img src="img/lazer1.jpg" />
+                <span class="card-title">Card Title</span>
+                <a
+                  href="reservas.html"
+                  class="btn-floating halfway-fab waves-effect waves-light red"
+                  ><i class="material-icons">add</i></a
+                >
+              </div>
+              <div class="card-content">
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                  Libero dolorum magnam laudantium tempore recusandae possimus
+                  laborum, odio porro quisquam. Eos fugit laborum incidunt et,
+                  reprehenderit at illo autem nobis. Numquam!Neque ipsam libero,
+                  iste corporis, qui nostrum perspiciatis fugit quod eligendi
+                  amet commodi earum voluptatum, inventore deserunt quidem
+                  voluptate eveniet facilis doloremque magnam voluptas? Dolorem
+                  veritatis aperiam asperiores. Ratione, voluptatem?.
+                </p>
+              </div>
+            </div>
+          </div>
+
+          <div class="col s12 m6">
+            <div class="card">
+              <div class="card-image">
+                <iframe
+                  width="100%"
+                  height="520"
+                  src="https://www.youtube.com/embed/h_d2lFNFWMY"
+                  frameborder="0"
+                  allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                  allowfullscreen
+                ></iframe>
+                <span class="card-title">Card Title</span>
+                <a class="btn-floating halfway-fab waves-effect waves-light red"
+                  ><i class="material-icons">add</i></a
+                >
+              </div>
+              <div class="card-content">
+                <p>
+                  Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                  Labore voluptatum saepe ut quis aspernatur dolorem explicabo
+                  velit, enim, et dolores ducimus? Inventore, quia vel. Enim
+                  quibusdam facilis vel at soluta!Saepe optio nemo eaque
+                  doloremque? Iusto dolores minima reprehenderit explicabo
+                  itaque quam odit sequi, quasi ea, quas aliquam repudiandae
+                  corporis, iste possimus ipsa sint officiis molestias quos
+                  provident praesentium omnis.
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <!--fim do row-->
+      </div>
+      <!--fim do cardHome-->
+    </main>
 
     <footer></footer>
 
